Descargando info y creando nodos y enriqueciendo la info a la mitad

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,7 @@
           Tailwind template
         </h3>
         <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
-          Use this template to build awesome websites using Snowpack and
-          Tailwind. It also includes Prettier and automatic publish to GitHub
-          pages using GitHub Actions. Learn more:
+          to be defined...
         </p>
         <ul
           class="text-xl leading-7 sm:flex justify-around sm:max-w-2xl sm:mx-auto mt-10"
